# qpixrtd

./: params.json  positions_125_90.txt
EXAMPLE/: recompile.sh
source/: CMakeLists.txt  PropagationTimeModel.cpp  ROOTFileManager.cpp  ROOTFileManager.h  SemiAnalyticalModel.cpp  SemiAnalyticalModel.h  Structures.cpp
